---------------------------------------------------------------------------------------------------
Version: 0.2.2
Date: 2025-09
  Changes:
    - Added 6 achievements
---------------------------------------------------------------------------------------------------
Version: 0.2.1
Date: 2025-09-09
  Graphics:
    - Changed hypercrusher's graphics
  Compatibility:
    - Potential fix for unknown compatibility issue (data-final-fixes.lua:96, "icons" being re-declared by another mod)
---------------------------------------------------------------------------------------------------
Version: 0.2.0
Date: 2025-09-07
  Changes:
    - Added a crusher that makes dust from any item to re-inject in the universe incubator (precursor now requires dust)
    - Added extra infinite research to worker-robots-speed
    - Added 1 extra research to worker-robots-storage
    - Added Asteroid collector MK2 (as a submod) and changed its requirements
    - Added Focussed gun turrets (as a submod) and make it require Panglite fiber
  Balance:
    - Added cryogenic packs to sentient processor tech
  Bugfixes:
    - Simulation chamber tech now requires AI T10
  UI:
    - Removed some recipe tooltips
  Graphics:
    - Reworked cloning-related icons and datacell icons
---------------------------------------------------------------------------------------------------
Version: 0.1.4
Date: 2025-08-31
  Changes:
    - Added sentient processors
    - Changed some names
    - Panderoots overgrowths don't attack electric poles
  Graphics:
    - Changed the appearance of panderoots overgrowths and their explosion, removed their sound
---------------------------------------------------------------------------------------------------
Version: 0.1.3
Date: 2025-08-30
  Balance:
    - Panderoots turrets have a better resistance to fire, poison, explosion
  Compatibility:
    - Fixed compatibility with Quality Seeds
  Graphics:
    - Changed panderoots icon
  Locale:
    - Russian update