@@ -15,7 +15,8 @@
     "matter_printer",
     "Cloning-vat-building >= 1.0.4",
     "snouz_better_asteroid_collector >= 1.0.2",
-    "snouz_long_electric_gun_turret >= 1.0.0"
+    "snouz_long_electric_gun_turret >= 1.0.3",
+    "snouz_space_platform_hull >= 1.0.0"
   ],
   "space_travel_required": true
 }
