@@ -2,6 +2,7 @@
 Version: 0.2.2
 Date: 2025-09
   Changes:
+    - Added snouz_space_platform_hull submod
     - Added 6 achievements
 ---------------------------------------------------------------------------------------------------
 Version: 0.2.1
